<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transport_booking"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_below="@+id/toolbar">




                <LinearLayout
                    android:id="@+id/main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/slect_market"
                        android:textColor="@color/colorBlack"
                        android:textSize="15dp" />

                    <Spinner
                        android:id="@+id/spinnar_market"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/design_edittext"
                        android:padding="10dp"></Spinner>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/select_Crop"
                        android:textColor="@color/colorBlack"
                        android:textSize="15dp" />

                    <Spinner
                        android:id="@+id/spinnar_crop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/design_edittext"
                        android:padding="10dp"></Spinner>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/mode_of_packing"
                        android:textColor="@color/colorBlack"
                        android:textSize="15dp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioGroup
                            android:id="@+id/radiogrp_sack"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/crates" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/sack" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/lose" />
                        </RadioGroup>


                    </LinearLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/no_of_crates"
                        android:textColor="@color/colorBlack"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/rd_vn_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".7"
                        android:background="@drawable/design_edittext"
                        android:gravity="center"
                        android:inputType="number"
                        android:padding="10dp"></EditText>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/select_time_date"
                        android:textColor="@color/colorBlack"
                        android:textSize="15dp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/img_date"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@mipmap/ic_calndar" />

                            <TextView
                                android:id="@+id/tv_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/date" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/img_time"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@mipmap/ic_time" />

                            <TextView
                                android:id="@+id/tv_time"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/time" />

                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>





                <TextView
                    android:id="@+id/tv_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/design_button"
                    android:gravity="center_horizontal"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="8dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="8dp"
                    android:text="@string/submit"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp"
                    android:layout_below="@+id/main"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>