<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.authentication.LoginActivity">

    <TextView
        android:id="@+id/tv_appname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textSize="30dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:text="Vesato"/>


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="138dp"
        app:srcCompat="@drawable/logo" />


    <EditText
        android:id="@+id/ed_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/design_edittext"
        android:padding="10dp"
       android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:maxLength="10"
        android:gravity="center"/>

    <TextView

        android:id="@+id/tv_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_mobile"
        android:background="@drawable/design_button"
        android:layout_centerHorizontal="true"
        android:text="लॉगिन"
        android:layout_marginTop="50dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="27dp"
        android:paddingRight="27dp"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:onClick="sendOTP"
        />
    <TextView

        android:id="@+id/tv_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_sign"
        android:background="@drawable/design_button"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:layout_marginTop="20dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        />

    <TextView

        android:id="@+id/tv_needhelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_submit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/need_help"
        android:textSize="20dp" />
</RelativeLayout>